testsuite/tests/parser/should_fail/ParserNoLambdaCase.hs
module ParserNoLambdaCase where

f = \case "1" -> 1

