testsuite/tests/parser/should_fail/ParserNoLambdaCase.stderr

ParserNoLambdaCase.hs:3:6: parse error on input ‛case’
